# ngd_proxy

./: .gitignore  README.md  client.py  config.json.example  implementation_plan.md  norgatedata_cache.py  pyproject.toml  requirements.txt  server.py  status_tracker.md  test__capital_event.ipynb  test__padding_status.ipynb  test__server_discovery.ipynb  test_cache.py  walkthrough.md
ngd_proxy/: __init__.py  client.py  norgatedata_cache.py  server.py
plans/: asset_metadata_implementation_plan.md  capital_event_implementation_plan.md  exchange_name_implementation_plan.md  fundamental_implementation_plan.md  futures_metadata_implementation_plan.md  major_exchange_listed_implementation_plan.md  padding_status_implementation_plan.md  security_name_implementation_plan.md  server_discovery_implementation_plan.md  subtype_implementation_plan.md  unadjusted_close_implementation_plan.md  update_time_implementation_plan.md
tests/: test_cache.py
