[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ngd_proxy"
version = "1.0.0"
description = "A high-performance HTTP & Parquet proxy and caching engine for Norgate Data."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "pandas>=2.0.0",
    "pyarrow>=12.0.0",
    "psutil>=5.9.0",
    "requests>=2.31.0",
    "cryptography>=41.0.0",
    "jinja2>=3.1.0"
]

[project.scripts]
ngd-proxy-server = "ngd_proxy.server:main"
